Fixed modal z-index

--- a/sass/global.scss
+++ b/sass/global.scss
@@ -169,7 +169,7 @@ a {
 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-= */
 .nav-wrapper {
   background: $nav;
-  z-index: 9999;
+  z-index: 999;
   &.pinned {
     width: 100%;
     height: 64px;
